--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="medium_margin">16dp</dimen>
     <dimen name="radius_s">15dp</dimen>
     <dimen name="xtra_margin">64dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
 </resources>
